--- a/src/main/resources/assets/epicmod/lang/en_us.json
+++ b/src/main/resources/assets/epicmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.epicmod.banana": "Banana",
   "item.epicmod.nimrod": "Nimrod",
+  "item.epicmod.nimrod_spawn_egg": "Nimrod Spawn Egg",
   "block.epicmod.nimrod_block": "Block of Nimrod",
 
   "epicmod.nimrod": "shabat shalom"
