Karin skull: Added karin skull entity Added kain spawn entity + functionality Bug Fixes

--- a/src/main/resources/assets/epicmod/lang/en_us.json
+++ b/src/main/resources/assets/epicmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.epicmod.banana": "Banana",
   "item.epicmod.nimrod": "Nimrod",
   "item.epicmod.nimrod_spawn_egg": "Nimrod Spawn Egg",
+  "item.epicmod.karin_spawn_egg": "Karin Spawn Egg",
   "block.epicmod.nimrod_block": "Block of Nimrod",
 
   "epicmod.nimrod": "shabat shalom"
