--- a/src/main/resources/assets/epicmod/lang/en_us.json
+++ b/src/main/resources/assets/epicmod/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.epicmod.nimrod_spawn_egg": "Nimrod Spawn Egg",
   "item.epicmod.karin_spawn_egg": "Karin Spawn Egg",
   "block.epicmod.nimrod_block": "Block of Nimrod",
+  "block.epicmod.karin_summoning_block": "Karin Summoning Block",
+  "entity.epicmod.karin": "Karin",
 
   "epicmod.nimrod": "shabat shalom"
 }
