Bug fixes and new Features: [new] magical hat item [new] Karin Summoning Block [new] Summoning Karin [update] updating to 1.20.1

--- a/src/main/resources/assets/epicmod/lang/en_us.json
+++ b/src/main/resources/assets/epicmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.epicmod.banana": "Banana",
   "item.epicmod.nimrod": "Nimrod",
+  "item.epicmod.hat": "Hat",
   "item.epicmod.nimrod_spawn_egg": "Nimrod Spawn Egg",
   "item.epicmod.karin_spawn_egg": "Karin Spawn Egg",
   "block.epicmod.nimrod_block": "Block of Nimrod",
