Bug fixes and new Features: [new] Nimrod Ore block [new] Nimrod Ore spawning [bug fix] fixed rendering bug due to 1.20.1 update.

--- a/src/main/resources/assets/epicmod/lang/en_us.json
+++ b/src/main/resources/assets/epicmod/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.epicmod.karin_spawn_egg": "Karin Spawn Egg",
   "block.epicmod.nimrod_block": "Block of Nimrod",
   "block.epicmod.karin_summoning_block": "Karin Summoning Block",
+  "block.epicmod.nimrod_ore": "Nimrod Ore",
   "entity.epicmod.karin": "Karin",
 
   "epicmod.nimrod": "shabat shalom"
